--- a/cards-vue/.gitignore
+++ b/cards-vue/.gitignore
@@ -19,5 +19,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-package.json yarn.lock
-package-lock.json package.json yarn.lock
+package.json
+package-lock.json
+yarn.lock
